Fix spacing on menuitem

--- a/src/components/menu/content/item/menu-item.css
+++ b/src/components/menu/content/item/menu-item.css
@@ -6,6 +6,7 @@
 }
 
 .item {
+  display: block;
   cursor: pointer;
   background: var(--menu-item-background);
   margin: var(--menu-item-margin);
